usage of rich text react renderer

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.11.1",
     "gatsby": "^4.1.0",
     "gatsby-source-contentful": "^6.1.0",
     "react": "^17.0.1",
