--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^4.1.0",
+    "gatsby-plugin-image": "^2.8.1",
     "gatsby-source-contentful": "^7.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
