--- a/.github/workflows/lgci.yaml
+++ b/.github/workflows/lgci.yaml
@@ -1,5 +1,7 @@
 name: Lighthouse CI
-on: [push]
+on: 
+  push:
+
 jobs:
   lhci:
     name: Lighthouse CI
@@ -18,3 +20,11 @@ jobs:
         run: |
           npm install -g @lhci/cli@0.7.x
           lhci autorun --config=./lighthouserc-ci.js
+  build : 
+    name : Gh-pages deploy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: enriikke/gatsby-gh-pages-action@v2
+        with:
+          access-token: ${{ secrets.ACCESS_TOKEN }}
