--- a/.github/workflows/lgci.yaml
+++ b/.github/workflows/lgci.yaml
@@ -24,8 +24,20 @@ jobs:
     name: Gh-pages deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: enriikke/gatsby-gh-pages-action@v2
+      - name : checkout
+        uses: actions/checkout@v2
+      - name : install node 
+        uses : actions/setup-node@v2
+        with:
+          node-version: 14.x
+      - name : install dependencies
+        run : npm install
+      - name : install gatsby cli 
+        run : npm install -g gatsby-cli
+      - name : install gh-pages
+        run : npm install gh-pages --save-dev
+      - name : deploy ... 
+        run : gatsby build --prefix-paths && gh-pages -d public
         with:
           access-token: ${{ secrets.ACCESS_TOKEN }}
           BRANCH: gh-pages
