--- a/.github/workflows/lgci.yaml
+++ b/.github/workflows/lgci.yaml
@@ -37,6 +37,6 @@ jobs:
       - name : install gh-pages
         run : npm install gh-pages --save-dev
       - name : set identity
-        run : git config --global user.email "m.sierra1037@hotmail.com" && git config --global user.name "mantra0111"
+        run : git config --global user.email "m.sierra1037@hotmail.com"
       - name : deploy ... 
         run : npm run deploy
