--- a/.github/workflows/lgci.yaml
+++ b/.github/workflows/lgci.yaml
@@ -38,5 +38,7 @@ jobs:
         run : npm install gh-pages --save-dev
       - name : set identity
         run : git config --global user.email "m.sierra1037@hotmail.com"
+      - name : set userName 
+        run : git config --global user.name "mantra0111"
       - name : deploy ... 
         run : npm run deploy
