chore: change project name in package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mantra-portfolio",
+  "name": "superlight",
   "version": "1.0.0",
   "private": true,
-  "description": "mantra-portfolio",
+  "description": "superlight",
   "author": "Mateo sierra",
   "keywords": [
     "gatsby"
