fix: hero picture explicit size, post's pictures alt text generated

--- a/.github/workflows/lgci.yaml
+++ b/.github/workflows/lgci.yaml
@@ -43,6 +43,6 @@ jobs:
       - name : set userName 
         run : git config --global user.name "$GITHUB_ACTOR"
       - name : set fetch URL 
-        run : git config remote.origin.url 'https://${{secrets.ACCESS_TOKEN}}@github.com/${{ github.repository }}'
+        run : git config remote.origin.url 'https://${{secrets.ACCOUNT_TOKEN}}@github.com/${{ github.repository }}'
       - name : deploy ... 
         run : npm run deploy
