--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "gatsby": "^4.1.0",
     "gatsby-plugin-image": "^2.8.1",
+    "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-source-contentful": "^7.6.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
